WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234021
[Win] WebCore::cfHDropFormat implementation is not CF specific
https://bugs.webkit.org/show_bug.cgi?id=234021
Summary
[Win] WebCore::cfHDropFormat implementation is not CF specific
Don Olmstead
Reported
2021-12-08 10:57:33 PST
Drop the USE(CF) guards.
Attachments
Patch
(6.97 KB, patch)
2021-12-08 11:05 PST
,
Don Olmstead
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.62 KB, patch)
2021-12-08 11:28 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2021-12-08 11:05:29 PST
Created
attachment 446389
[details]
Patch
Don Olmstead
Comment 2
2021-12-08 11:06:31 PST
Comment on
attachment 446389
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446389&action=review
> Source/WebCore/platform/win/ClipboardUtilitiesWin.cpp:56 > +#if USE(CF) > +
There is some additional CF specific code in this file that will be removed in a subsequent patch.
Alex Christensen
Comment 3
2021-12-08 11:09:17 PST
Comment on
attachment 446389
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446389&action=review
> Source/WebCore/platform/win/ClipboardUtilitiesWin.cpp:49 > FORMATETC* cfHDropFormat()
Could we rename these to things like "dropFormat"?
> Source/WebCore/platform/win/ClipboardUtilitiesWin.cpp:737 > void getCFData(IDataObject* data, FORMATETC* format, Vector<String>& dataStrings)
ditto
> Source/WebCore/platform/win/ClipboardUtilitiesWin.cpp:791 > void setCFData(IDataObject* data, FORMATETC* format, const Vector<String>& dataStrings)
ditto
Don Olmstead
Comment 4
2021-12-08 11:14:12 PST
Comment on
attachment 446389
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446389&action=review
>> Source/WebCore/platform/win/ClipboardUtilitiesWin.cpp:49 >> FORMATETC* cfHDropFormat() > > Could we rename these to things like "dropFormat"?
This actually corresponds to
https://docs.microsoft.com/en-us/windows/win32/shell/clipboard#cf_hdrop
so the name does have a specific meaning to Windows code.
Alex Christensen
Comment 5
2021-12-08 11:15:05 PST
oh, cool. CFData is not though
Don Olmstead
Comment 6
2021-12-08 11:28:27 PST
Created
attachment 446395
[details]
Patch
EWS
Comment 7
2021-12-08 12:47:53 PST
Committed
r286708
(
244985@main
): <
https://commits.webkit.org/244985@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446395
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-12-08 12:48:43 PST
<
rdar://problem/86225180
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug